# QuickMind

./: .gitignore  README.md
backend/: .env.example  README.md  langgraph.json  pyproject.toml  setup.sh
backend/gen_ui_backend/: agent.py  rag_agent.py  requirements.txt  server.py  types.py
backend/gen_ui_backend/contact_database/: contacts.json
backend/gen_ui_backend/utils/: states.py  tools.py
backend/gen_ui_backend/utils/graphs/RAGGraph/: nodes.py
backend/gen_ui_backend/utils/graphs/SuperGraph/: nodes.py
streamlit/: chat_bot.py  rag_utility.py  requirements.txt
streamlit/chroma/: chroma.sqlite3
